# yt-dlp-telegram

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: cargo-check.yml  ci.yml  clippy.yml  docker-publish.yml
src/: error.rs  handlers.rs  main.rs  tasks.rs  yt_dlp.rs
